<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_all" />
    <item
        android:id="@+id/nav_matching"
        android:title="@string/nav_matching" />

    <item
        android:id="@+id/nav_custom_item_application"
        android:title="@string/nav_header_application" />

    <item
        android:id="@+id/nav_post_application"
        android:title="@string/nav_post_application" />

    <item
        android:id="@+id/nav_history_application"
        android:title="@string/nav_my_application" />

    <item
        android:id="@+id/nav_custom_item_tutor"
        android:title="@string/nav_header_tutor" />

    <item
        android:id="@+id/nav_create_cv"
        android:title="@string/nav_create_cv" />

    <item
        android:id="@+id/nav_history_cv"
        android:title="@string/nav_my_cv" />

    <item
        android:id="@+id/nav_custom_item_view"
        android:title="@string/nav_header_view" />
    <item
        android:id="@+id/nav_message"
        android:title="@string/nav_message" />


    <item
        android:id="@+id/nav_setting"
        android:title="@string/nav_settings" />
</menu> 